autocomplete for presents is ok

--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -13,7 +13,7 @@
   {% block stylesheets %}{% endblock stylesheets %}
 
 </head>
-<body class="hold-transition {% block body_class %}{% endblock body_class %}">
+<body class="hold-transition skin-blue sidebar-collapse sidebar-mini {% block body_class %}{% endblock body_class %}">
 <div class="wrapper">
 
     {% include 'includes/navigation.html' %}
@@ -25,9 +25,6 @@
     {% include 'includes/footer.html' %}
 
     <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Control sidebar content goes here -->
-    </aside>
     <!-- /.control-sidebar -->
 
 </div>
