--- a/apps/templates/home/personalreport.html
+++ b/apps/templates/home/personalreport.html
@@ -47,7 +47,9 @@
           <!-- Profile Image -->
           <div class="box box-primary">
             <div class="box-body box-profile">
+              {% if imglen != 0 %}
               <img class="profile-user-img img-responsive img-circle" src="{{person.simage.url}}" alt="User profile picture">
+              {% endif %}
               <h3 class="profile-username text-center">{{person.first_name }} {{person.last_name}}</h3>
               <form method='POST'>
                   {% csrf_token %}
@@ -148,7 +150,7 @@
                                     <th>ردیف</th>
                                     <th>روز غیبت</th>
                                 </tr>
-                                {% for s in abcenses%}
+                                {% for s in absence%}
                                 <tr>
                                     <td>{{s.id}}</td>
                                     <td>{{s.doa}}</td>
