Change in trainers

--- a/apps/templates/home/todayclasslist.html
+++ b/apps/templates/home/todayclasslist.html
@@ -22,6 +22,7 @@
        folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}//dist/css/skins/_all-skins.min.css">
 
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -109,7 +110,7 @@
   </div>
   
 </div>
-
+</div>
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
@@ -124,8 +125,11 @@
   <script src="{{ ASSETS_ROOT }}/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
   <script src="{{ ASSETS_ROOT }}/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
   <script src="{{ ASSETS_ROOT }}/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/dist/js/pages/dashboard.js"></script>
+
   <!-- AdminLTE App -->
-  <link rel="stylesheet" href="{{ ASSETS_ROOT }}/dist/css/AdminLTE.css">
+<script src="{{ ASSETS_ROOT }}/dist/js/adminlte.min.js"></script>
+
   <!-- AdminLTE for demo purposes -->
   <script src="{{ ASSETS_ROOT }}/js/demo.js"></script>
   <!-- page script -->
