--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -157,12 +157,11 @@
                 </thead>
                 <tbody>
                         {% for p in person %}
-                              {% if p.rsession < 3 %} <tr bgcolor="red">{%elif p.rsession < 6 %}<tr bgcolor="yellow">{% else %} <tr> {% endif %}
-                              <td align="right">{{p.first_name}} {{p.last_name}}</td>
+                                <td align="right">{{p.first_name}} {{p.last_name}}</td>
                               <td align="right">{{p.classname}}</td>
-                              <td align="right">{{p.rsession}}</td>
+                            <td>{% if p.rsession < 3 %}   <small style="font-size: 100%;    label.padding: 0.4em 0.6em 0.3em;" class="label pull-right  bg-red">{{p.rsession}}</small> {%elif p.rsession < 6 %}<small style="font-size: 100%;" class="label pull-right bg-yellow">{{p.rsession}}</small>{% else %}<small style="font-size: 100%;" class="label pull-right bg-green">{{p.rsession}}</small>{% endif %}</td>  
                               <td align="right"><a href='/personalreport/{{p.id}}'><button type="submit"  class="btn btn-danger">پروفایل</button></a></td>
-                              </tr>
+                            </tr>
                         {% endfor %}
 
                 </tbody>
