--- a/apps/templates/home/classlist.html
+++ b/apps/templates/home/classlist.html
@@ -98,14 +98,10 @@
 
                 </tr>
                             {% for p in person %}
-                                {% if p.rsession < 4 %}
-                                    <tr bgcolor="red">
-                                {%elif p.rsession < 6 %}
-                                    <tr bgcolor="yellow">
-                                {%endif%}
+                       
                                 <td><a href='/personalreport/{{p.id}}'</a>{{p.full_name}}</td>
                                 <td>{{p.classname.cname}}</td>
-                                <td>{{p.rsession}}</td>
+                            <td>{% if p.rsession < 3 %}   <small style="font-size: 100%;    label.padding: 0.4em 0.6em 0.3em;" class="label pull-right  bg-red">{{p.rsession}}</small> {%elif p.rsession < 6 %}<small style="font-size: 100%;" class="label pull-right bg-yellow">{{p.rsession}}</small>{% else %}<small style="font-size: 100%;" class="label pull-right bg-green">{{p.rsession}}</small>{% endif %}</td>  
                                 <td>
                                     <input type="radio" id="present" name="status_{{p.id}}" class="flat-red" value="present_{{p.id}}">
                                     <label for="html">حاضر&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>                          
@@ -170,8 +166,9 @@
         <div class="col-xs-12">
           <div class="box box-default">
             <div class="box-body">
-                <button form="myForm" type="submit" name="register"   class="btn btn-success" data-toggle="modal" data-target="#modal-success" >ثبت حضور و غیاب</button>
-            </div>
+                <button onclick="myFunction()" form="myForm" type="submit" name="register"   class="btn btn-success" data-toggle="modal" data-target="#modal-success" >ثبت حضور و غیاب</button>
+
+              </div>
           </div>
         </div>
       </div>
@@ -202,6 +199,7 @@
 <script src="{{ ASSETS_ROOT }}/bower_components/fastclick/lib/fastclick.js"></script>
   <script src="{{ ASSETS_ROOT }}/plugins/sweetalert2/sweetalert2.min.js"></script>
   <script src="{{ ASSETS_ROOT }}/plugins/toastr/toastr.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
   <!-- AdminLTE App -->
@@ -461,4 +459,10 @@
     });
 
   </script>
+
+  <script>
+function myFunction() {
+  alert("اعمال گردید");
+}
+</script>
 {% endblock javascripts %}
