users is ok. trainer is ok.just analayse remains

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -85,7 +85,7 @@
             <div class="icon">
               <i class="ion ion-clipboard"></i>
             </div>
-            <a href="#" class="small-box-footer">اطلاعات بیشتر <i class="fa fa-arrow-circle-left"></i></a>
+            <a href="/todayclasslist" class="small-box-footer">اطلاعات بیشتر <i class="fa fa-arrow-circle-left"></i></a>
           </div>
         </div>
         <!-- ./col -->
@@ -130,7 +130,7 @@
             <div class="icon">
               <i class="ion ion-pie-graph"></i>
             </div>
-            <a href="#" class="small-box-footer">اطلاعات بیشتر <i class="fa fa-arrow-circle-left"></i></a>
+            <a href="/trainerslist" class="small-box-footer">اطلاعات بیشتر <i class="fa fa-arrow-circle-left"></i></a>
           </div>
         </div>
         <!-- ./col -->
