--- a/apps/templates/home/personalreport.html
+++ b/apps/templates/home/personalreport.html
@@ -105,6 +105,20 @@
               </p>
 
 
+              <hr>
+              <strong><i class="fa fa-pencil margin-r-5"></i>رشته ورزشی:</strong>
+              <p>
+                  {{ person.sfield }}
+              </p>
+
+              <hr>
+              <strong><i class="fa fa-pencil margin-r-5"></i>مربی ورزشی:</strong>
+              <p>
+                <a href="/trainerreport/{{ person.classname.tname.id }}">
+                   {{ person.classname.tname }}</a>
+              </p>
+
+
             </div>
             <!-- /.box-body -->
           </div>
