chart added but not suitable for this

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -151,7 +151,7 @@
                 <tr>
                   <th> نام</th>
                   <th>کلاس</th>
-                  <th>جلسات مانده </th>
+                  <th>جلسات<br>مانده </th>
                   <th>جزییات</th>
                 </tr>
                 </thead>
@@ -169,7 +169,7 @@
                 <tr>
                   <th> نام</th>
                   <th>کلاس</th>
-                  <th>جلسات مانده </th>
+                  <th>جلسات<br>مانده </th>
                   <th>جزییات</th>
                 </tr>
                 </tfoot>
