--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -158,7 +158,7 @@
                 </thead>
                 <tbody>
                         {% for p in person %}
-                              <td align="right">{{p.first_name}} {{p.last_name}}</td>
+                              <td align="right">{{p.full_name}} </td>
                               <td align="right">{{p.classname}}</td>
                             <td>{% if p.rsession < 3 %}   <small style="font-size: 100%;    label.padding: 0.4em 0.6em 0.3em;" class="label pull-right  bg-red">{{p.rsession}}</small> {%elif p.rsession < 6 %}<small style="font-size: 100%;" class="label pull-right bg-yellow">{{p.rsession}}</small>{% else %}<small style="font-size: 100%;" class="label pull-right bg-green">{{p.rsession}}</small>{% endif %}</td> 
                             <td></td> 
