--- a/apps/templates/home/trainerreport.html
+++ b/apps/templates/home/trainerreport.html
@@ -30,7 +30,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        پروفایل {{ trainer.tfull_name }}
+        پروفایل {{ trainer.full_name }}
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> خانه</a></li>
@@ -53,7 +53,7 @@
               {% else %}
               <img class="profile-user-img img-responsive img-circle" src="{% static 'assets/img' %}/avatar.png"> 
               {% endif %}
-              <h3 class="profile-username text-center">{{person.first_name }} {{person.last_name}}</h3>
+              <h3 class="profile-username text-center">{{person.full_name }} </h3>
             </div>
             <!-- /.box-body -->
           </div>
@@ -114,7 +114,7 @@
                 <hr>
               <strong><i class="fa fa-university margin-r-5"></i>تحصیلات  </strong>
               <p>
-                  {{ trainer.edu }}
+                  {{ trainer.t_edu }}
               </p>
 
               <hr>
