--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -2,7 +2,7 @@
   <!-- Navbar -->
    <header class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a href="/" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini">پنل</span>
       <!-- logo for regular state and mobile devices -->
@@ -28,7 +28,7 @@
               <a href="/"><span class="hidden-xs"> خانه </span><i class="fa fa-home"></i></a>
           </li>
        <li >
-              <a href="logout/"><span class="hidden-xs"> خروج </span><i class="fa fa-sign-out"></i></a>
+              <a href="/logout/"><span class="hidden-xs"> خروج </span><i class="fa fa-sign-out"></i></a>
           </li>
           </li>
         </ul>
