main page and slidebar is ok

--- a/apps/templates/home/personalreport.html
+++ b/apps/templates/home/personalreport.html
@@ -101,7 +101,7 @@
               <hr>
               <strong><i class="fa fa-pencil margin-r-5"></i>تاریخ آنالیز بعدی:</strong>
               <p>
-                  {{ nextanalysis }}
+                  {{ person.nextanalysis }}
               </p>
 
 
