--- a/apps/templates/home/trainerreport.html
+++ b/apps/templates/home/trainerreport.html
@@ -48,8 +48,8 @@
           <!-- Profile Image -->
           <div class="box box-primary">
             <div class="box-body box-profile">
-               {% if trainer.timage %}
-              <img class="profile-user-img img-responsive img-circle" src="{{trainer.timage.url}}" >
+               {% if trainer.simage %}
+              <img class="profile-user-img img-responsive img-circle" src="{{trainer.simage.url}}" >
               {% else %}
               <img class="profile-user-img img-responsive img-circle" src="{% static 'assets/img' %}/avatar.png"> 
               {% endif %}
