--- a/apps/templates/home/trainerslist.html
+++ b/apps/templates/home/trainerslist.html
@@ -49,7 +49,7 @@ nk Page {% endblock %}
             <!-- Add the bg color to the header using any of the bg-* classes -->
             <div class="widget-user-header {{ colorbg|random }}">
               
-              <a href='/personalreport/{{trainer.id}}'><h3 class="widget-user-username">{{trainer.full_name}}</h3></a>
+              <a href='/trainerreport/{{trainer.id}}'><h3 class="widget-user-username">{{trainer.full_name}}</h3></a>
             </div>
 
             <div class="widget-user-image">
