Update trainerreport.html for Trainer Gender

--- a/apps/templates/home/trainerreport.html
+++ b/apps/templates/home/trainerreport.html
@@ -77,7 +77,7 @@
 
               <strong> جنسیت</strong>
 
-              {% if person.gender == "m" %}                                
+              {% if trainer.gender == "m" %}                                
                   <p class="text-muted"> مرد </p>
               {% else %}
                     <p class="text-muted"> زن </p>
