add trainer name to class model

--- a/apps/templates/home/personalreport.html
+++ b/apps/templates/home/personalreport.html
@@ -114,8 +114,8 @@
               <hr>
               <strong><i class="fa fa-pencil margin-r-5"></i>مربی ورزشی:</strong>
               <p>
-                <a href="/trainerreport/{{ trainername.id }}">
-                   {{ trainername.full_name }}</a>
+                <a href="/trainerreport/{{ trainer_id }}">
+                   {{ person.classname.ctrainer }}</a>
               </p>
 
 
