trainer exp to textbox-new insurance model added

--- a/apps/templates/home/personalreport.html
+++ b/apps/templates/home/personalreport.html
@@ -95,7 +95,7 @@
               <hr>
               <strong><i class="fa fa-pencil margin-r-5"></i>تاریخ ثبت بعدی بیمه ورزشی:</strong>
               <p>
-                  {{ nextinsurance }}
+                  {{ person.insurancedate }}
               </p>
 
               <hr>
